--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,16 @@
 <h1>All lists</h1>
 
-<ul>
-    <div class="container">
-        <% @lists.each do |list| %>
-        <li><div class="card " style="width: 18rem;"><%= link_to list.name, list_path(list)%></div></li>
-        <% end %>
-    </div>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+<tbody>
+    <% @lists.each do |list| %>
+    <tr>
+        <td><%= link_to list.name, list_path(list)%><td>
+    </tr>
+    <% end %>
+</tbody>
