--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,18 +1,28 @@
-<h1><%= @list.name %></h1>
+<div class="banner">
+  <div class="container text-center">
+    <h1><%= @list.name %></h1>
+  </div>
+</div>
 
-<ul>
-  <li>Name: <strong><%= @list.name %></strong></li>
-</ul>
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
+      <div class="cards">
+          <% @list.bookmarks.each do |bookmark| %>
+          <div class="list-group-item">
+          <div><%= bookmark.comment %></div>
+          <div><%= bookmark.movie.title %></div>
+          <%= link_to "Remove",
+              bookmark_path(bookmark),
+              method: :delete,
+              data: { confirm: "Are you sure?" } %></div>
+          <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
-
-<ul class="list-group">
-  <% @list.bookmarks.each do |bookmark| %>
-    <li class="list-group-item"><%= bookmark.comment %><%= bookmark.movie.title %><%= link_to "Remove",
-        bookmark_path(bookmark),
-        method: :delete,
-        data: { confirm: "Are you sure?" } %></li>
-  <% end %>
-</ul>
-
+<div class="footer">
 <%= link_to 'Back', lists_path %>
 <%= link_to 'Add a bookmark', new_list_bookmark_path(@list) %>
+</div>
